@@ -76,6 +76,7 @@ Jens Elkner <elkner*linofee.org>
 Jason Englander <jason*englanders.cc>
 Tony Finch <dot*dotat.at>
 David Ford <david+cert*blue-labs.org>
+Piotr Gackiewicz <gacek*intertele.pl>
 Dean Gaudet <dean-clamav*arctic.org>
 Michel Gaudet <Michel.Gaudet*ehess.fr>
 Philippe Gay <ph.gay*free.fr>
